--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -13,6 +13,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   private Map<SObjectType, Set<String>> lookupObjectToUniqueFieldNames;
   private RollupRelationshipFieldFinder.Traversal traversal;
   private Boolean wasConvertedToFullRecalculation = false;
+  private Boolean isFromBatchExecute = false;
 
   protected Boolean isTimingOut = false;
   protected Boolean isProcessed = false;
@@ -37,6 +38,11 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   private enum ParentUpdateType {
     LOOKUP,
     REPARENTED
+  }
+
+  private enum TimeoutCheckLevel {
+    AT_ROLLUP,
+    AT_PARENT
   }
 
   private Map<Schema.SObjectType, RollupFullRecalcProcessor> childToUnexpectedFullRecalc {
@@ -85,6 +91,16 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         uniqueParentFields = new Set<String>();
       }
       return uniqueParentFields;
+    }
+    set;
+  }
+
+  private static Map<String, Map<String, CalcItemBag>> CACHED_CALC_ITEM_BAGS {
+    get {
+      if (CACHED_CALC_ITEM_BAGS == null) {
+        CACHED_CALC_ITEM_BAGS = new Map<String, Map<String, CalcItemBag>>();
+      }
+      return CACHED_CALC_ITEM_BAGS;
     }
     set;
   }
@@ -228,26 +244,11 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   public virtual void execute(Database.BatchableContext context, List<SObject> scope) {
     this.logger.log('starting batch chunk', this, System.LoggingLevel.INFO);
 
-    if (this.getTypeName() == RollupAsyncProcessor.class.getName()) {
-      this.lookupItems = scope;
-      for (Integer index = this.rollups.size() - 1; index >= 0; index--) {
-        RollupAsyncProcessor roll = this.rollups[index];
-        if (scope.getSObjectType() != roll.lookupObj) {
-          this.rollups.remove(index);
-          this.deferredRollups.add(roll);
-        }
-      }
-    } else {
-      this.calcItems = scope;
-    }
+    this.isFromBatchExecute = true;
+    this.innerBatchExecute(scope);
+    this.isFromBatchExecute = false;
 
-    this.performWork();
-
-    BatchEndSnapshot snapshot = new BatchEndSnapshot();
-    snapshot.currentHeapUsage = Limits.getHeapSize();
-    snapshot.previouslyResetParentsSize = this.previouslyResetParents.size();
-    this.logger.log('batch chunk end', snapshot, System.LoggingLevel.INFO);
-    this.logger.save();
+    this.executeFinish(new Map<String, String>{ 'previouslyResetParents size' => '' + this.previouslyResetParents.size() });
   }
 
   public virtual void finish(Database.BatchableContext context) {
@@ -337,6 +338,23 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
 
   protected String getNoProcessId() {
     return 'No process Id';
+  }
+
+  protected virtual void innerBatchExecute(List<SObject> scope) {
+    if (this.getTypeName() == RollupAsyncProcessor.class.getName()) {
+      this.lookupItems = scope;
+      for (Integer index = this.rollups.size() - 1; index >= 0; index--) {
+        RollupAsyncProcessor roll = this.rollups[index];
+        if (scope.getSObjectType() != roll.lookupObj) {
+          this.rollups.remove(index);
+          this.deferredRollups.add(roll);
+        }
+      }
+    } else {
+      this.calcItems = scope;
+    }
+
+    this.performWork();
   }
 
   protected virtual void performWork() {
@@ -452,13 +470,17 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     }
 
     public void execute(System.QueueableContext qc) {
+      this.logger.log('Starting queueable', this, System.LoggingLevel.INFO);
       AdditionalContext context = new AdditionalContext(qc);
       this.setCurrentJobId(context.getJobId());
       System.attachFinalizer(new RollupFinalizer());
+
       this.performWork();
+
       if (this.fullRecalcProcessor?.isBatch() != true) {
         this.finish(context);
       }
+      this.executeFinish(null);
     }
   }
 
@@ -482,14 +504,21 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     }
   }
 
-  private class BatchEndSnapshot {
-    public Long currentHeapUsage { get; set; }
-    public Long heapLimit {
+  private class RollupEndSnapshot {
+    public RollupEndSnapshot(Map<String, String> additionalContext) {
+      this.additionalContext = additionalContext;
+    }
+    public Long currentHeapUsage {
       get {
-        return 12000000;
+        return Limits.getHeapSize();
       }
     }
-    public Long previouslyResetParentsSize { get; set; }
+    public Long heapLimit {
+      get {
+        return Limits.getLimitHeapSize();
+      }
+    }
+    public Map<String, String> additionalContext { get; set; }
   }
 
   protected virtual String beginAsyncRollup() {
@@ -503,6 +532,9 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   }
 
   protected String startBatchProcessor() {
+    if (this.isFromBatchExecute) {
+      return new QueueableProcessor(this).startAsyncWork();
+    }
     return Database.executeBatch(this, this.rollupControl.BatchChunkSize__c.intValue());
   }
 
@@ -682,7 +714,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       roll.isProcessed = true;
       this.setupCalcItemData(roll);
       // for each iteration, ensure we're not operating beyond the bounds of our governor limits
-      if (this.getIsTimingOut(roll.rollupControl)) {
+      if (this.getIsTimingOut(roll.rollupControl, TimeoutCheckLevel.AT_ROLLUP)) {
         this.addProcessorToDeferredRollups(roll);
         continue;
       }
@@ -814,7 +846,10 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
     }
   }
 
-  private Boolean getIsTimingOut(RollupControl__mdt control) {
+  private Boolean getIsTimingOut(RollupControl__mdt control, TimeoutCheckLevel timeCheckLevel) {
+    if (timeCheckLevel == TimeoutCheckLevel.AT_PARENT && this.fullRecalcProcessor != null) {
+      return false;
+    }
     if (this.isTimingOut == false && hasExceededCurrentRollupLimits(control)) {
       this.logger.log(this.getTypeName() + ': starting to time out ...', System.LoggingLevel.WARN);
       this.isTimingOut = true;
@@ -864,6 +899,16 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
   private Map<String, CalcItemBag> getCalcItemsByLookupField(RollupAsyncProcessor roll) {
     if (roll.calcItems == null) {
       return new Map<String, CalcItemBag>();
+    }
+
+    String cacheKey = '' + roll.lookupObj + roll.lookupFieldOnCalcItem;
+    switch on this.invokePoint {
+      when FROM_FULL_RECALC_LWC, FROM_SINGULAR_PARENT_RECALC_LWC, FROM_FULL_RECALC_FLOW {
+        Map<String, CalcItemBag> possiblyCachedItems = CACHED_CALC_ITEM_BAGS.get(cacheKey);
+        if (possiblyCachedItems != null) {
+          return possiblyCachedItems;
+        }
+      }
     }
 
     Map<String, CalcItemBag> lookupFieldToCalcItems = new Map<String, CalcItemBag>();
@@ -929,7 +974,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         }
       }
     }
-
+    CACHED_CALC_ITEM_BAGS.put(cacheKey, lookupFieldToCalcItems);
     return lookupFieldToCalcItems;
   }
 
@@ -1123,7 +1168,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       Boolean shouldRunSyncDeferred = this.getShouldRunSyncDeferred(rollup);
       Boolean couldRunSync =
         rollup.rollupControl.ShouldRunAs__c == RollupMetaPicklists.ShouldRunAs.Synchronous ||
-        (isRunningAsync && this.getIsTimingOut(rollup.rollupControl) == false) ||
+        (isRunningAsync && this.getIsTimingOut(rollup.rollupControl, TimeoutCheckLevel.AT_ROLLUP) == false) ||
         this.isSingleRecordSyncUpdate(rollup);
 
       if (limitTester.hasExceededOrgAsyncLimit()) {
@@ -1266,7 +1311,10 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
         CalcItemBag bag = calcItemsByLookupField.get(key);
         List<SObject> localCalcItems = bag.getAll();
 
-        if (this.getIsTimingOut(this.rollupControl) || (this.isValidAdditionalCalcItemRetrieval(roll) && bag.hasQueriedForAdditionalItems == false)) {
+        if (
+          this.getIsTimingOut(this.rollupControl, TimeoutCheckLevel.AT_PARENT) ||
+          (this.isValidAdditionalCalcItemRetrieval(roll) && bag.hasQueriedForAdditionalItems == false)
+        ) {
           this.addProcessorToDeferredRollups(roll);
           lookupItems.remove(index);
           continue;
@@ -1447,8 +1495,15 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
 
   private void cleanup() {
     RollupEvaluator.clearCache();
+    CACHED_CALC_ITEM_BAGS = null;
     this.uniqueParentFields.clear();
     this.cleanupStaticVars();
     this.getCachedApexOperations().clear();
+  }
+
+  private void executeFinish(Map<String, String> additionalContext) {
+    RollupEndSnapshot snapshot = new RollupEndSnapshot(additionalContext);
+    this.logger.log(this.getTypeName() + ' execute end', snapshot, System.LoggingLevel.INFO);
+    this.logger.save();
   }
 }
