Removes some goofy test-based workarounds for System.OrgLimits not being previously available during packaging workflows thanks to @jongpie

--- a/rollup/core/classes/RollupLimits.cls
+++ b/rollup/core/classes/RollupLimits.cls
@@ -2,7 +2,7 @@ public without sharing class RollupLimits {
   @TestVisible
   private static Integer stubbedQueryRows;
   @TestVisible
-  private static Integer orgAsyncJobsUsed;
+  private static Integer currentAsyncJobsUsed;
   @TestVisible
   private static Integer stubAsyncTimeoutInterval;
 
@@ -22,18 +22,15 @@ public without sharing class RollupLimits {
 
   private static final Boolean HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT {
     get {
-      Integer countOfJobsUsed = 0;
       Integer asyncJobLimit = 250000;
       // at the moment, packaging orgs run tests synchronously, which produces an error when fetching System.OrgLimits.getMap()
       // this is a workaround until it's safe to access OrgLimits from a synchronously running test
-      if (HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT == null && orgAsyncJobsUsed == null) {
-        System.OrgLimit asyncLimit = System.OrgLimits.getMap().get('DailyAsyncApexExecutions');
-        asyncJobLimit = asyncLimit.getLimit();
-        countOfJobsUsed = asyncLimit.getValue();
-      } else if (HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT == null) {
-        countOfJobsUsed = orgAsyncJobsUsed;
+      if (HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT == null) {
+        System.OrgLimit asyncOrgLimit = System.OrgLimits.getMap().get('DailyAsyncApexExecutions');
+        asyncJobLimit = asyncOrgLimit.getLimit();
+        Integer countOfJobsUsed = currentAsyncJobsUsed != null ? currentAsyncJobsUsed : asyncOrgLimit.getValue();
+        HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT = countOfJobsUsed - asyncJobLimit > 0;
       }
-      HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT = countOfJobsUsed - asyncJobLimit > 0;
       return HAS_EXCEEDED_ORG_ASYNC_JOB_LIMIT;
     }
     set;
