Beginning of migration to null coalesce operator now that sfdx-scanner supports the syntax

--- a/extra-tests/classes/RollupTestUtils.cls
+++ b/extra-tests/classes/RollupTestUtils.cls
@@ -52,9 +52,7 @@ public class RollupTestUtils {
 
   public static DMLMock loadMock(List<SObject> records) {
     for (SObject record : records) {
-      if (record.Id == null) {
-        record.Id = createId(record.getSObjectType());
-      }
+      record.Id = record.Id ?? createId(record.getSObjectType());
     }
     Rollup.records = records;
     Rollup.shouldRun = true;
