--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -56,9 +56,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   // that never reference these variables
   private static final Map<SObjectType, Set<TriggerOperation>> CACHED_APEX_OPERATIONS {
     get {
-      if (CACHED_APEX_OPERATIONS == null) {
-        CACHED_APEX_OPERATIONS = new Map<SObjectType, Set<TriggerOperation>>();
-      }
+      CACHED_APEX_OPERATIONS = CACHED_APEX_OPERATIONS ?? new Map<SObjectType, Set<TriggerOperation>>();
       return CACHED_APEX_OPERATIONS;
     }
     set;
@@ -67,9 +65,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   @TestVisible
   private static List<RollupFullRecalcProcessor> CACHED_FULL_RECALCS {
     get {
-      if (CACHED_FULL_RECALCS == null) {
-        CACHED_FULL_RECALCS = new List<RollupFullRecalcProcessor>();
-      }
+      CACHED_FULL_RECALCS = CACHED_FULL_RECALCS ?? new List<RollupFullRecalcProcessor>();
       return CACHED_FULL_RECALCS;
     }
     set;
@@ -77,9 +73,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   private static Set<String> CACHED_COUNT_QUERIES {
     get {
-      if (CACHED_COUNT_QUERIES == null) {
-        CACHED_COUNT_QUERIES = new Set<String>();
-      }
+      CACHED_COUNT_QUERIES = CACHED_COUNT_QUERIES ?? new Set<String>();
       return CACHED_COUNT_QUERIES;
     }
     set;
@@ -88,9 +82,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   @TestVisible
   private static List<Rollup> CACHED_ROLLUPS {
     get {
-      if (CACHED_ROLLUPS == null) {
-        CACHED_ROLLUPS = new List<Rollup>();
-      }
+      CACHED_ROLLUPS = CACHED_ROLLUPS ?? new List<Rollup>();
       return CACHED_ROLLUPS;
     }
     set;
@@ -98,9 +90,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   private static final RollupCalcItemReplacer CALC_ITEM_REPLACER {
     get {
-      if (CALC_ITEM_REPLACER == null) {
-        CALC_ITEM_REPLACER = new RollupCalcItemReplacer(CACHED_DEFAULT);
-      }
+      CALC_ITEM_REPLACER = CALC_ITEM_REPLACER ?? new RollupCalcItemReplacer(CACHED_DEFAULT);
       return CALC_ITEM_REPLACER;
     }
     set;
@@ -108,19 +98,15 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   protected Map<Id, SObject> oldCalcItems {
     get {
-      if (oldCalcItems == null) {
-        oldCalcItems = new Map<Id, SObject>();
-      }
-      return oldCalcItems;
+      this.oldCalcItems = this.oldCalcItems ?? new Map<Id, SObject>();
+      return this.oldCalcItems;
     }
     set;
   }
 
   protected final Set<Id> matchingCalcItemIds {
     get {
-      if (matchingCalcItemIds == null) {
-        matchingCalcItemIds = new Set<Id>();
-      }
+      this.matchingCalcItemIds = this.matchingCalcItemIds ?? new Set<Id>();
       return matchingCalcItemIds;
     }
     set;
@@ -129,10 +115,8 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   @TestVisible
   protected final List<RollupAsyncProcessor> rollups {
     get {
-      if (rollups == null) {
-        rollups = new List<RollupAsyncProcessor>();
-      }
-      return rollups;
+      this.rollups = this.rollups ?? new List<RollupAsyncProcessor>();
+      return this.rollups;
     }
     set;
   }
@@ -152,8 +136,8 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
   private Map<String, String> baseProps {
     get {
-      if (this.baseProps == null) {
-        this.baseProps = new Map<String, String>{
+      this.baseProps = this.baseProps ??
+        new Map<String, String>{
           'Type' => this.getTypeName(),
           'Invocation Point' => this.invokePoint?.name(),
           'Is Full Recalc' => String.valueOf(this.isFullRecalc),
@@ -161,7 +145,6 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
           'Is Conductor' => String.valueOf(this.isConductor),
           'Inner rollups' => String.valueOf(this.rollups.size())
         };
-      }
       return this.baseProps;
     }
     set;
@@ -177,9 +160,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   @TestVisible
   private static RollupSObjectUpdater DML {
     get {
-      if (DML == null) {
-        DML = new RollupSObjectUpdater();
-      }
+      DML = DML ?? new RollupSObjectUpdater();
       return DML;
     }
     set;
@@ -1830,6 +1811,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     batch(rollupsToProcess, InvocationPoint.FROM_INVOCABLE);
   }
 
+  @SuppressWarnings('PMD.ApexCRUDViolation')
   public static List<SObject> getMetadataFromCache(SObjectType metadataType) {
     List<SObject> matchingMetadata;
     // We need to clean up the Entity Definition / Field Definition
